# alloca-type-inference

./: CMakeLists.txt  Makefile  README.md
include/: type_inference.hh
src/: pass_registration.cc  type_inference.cc
